Added test command and yargs library to send parameters from the console

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "QA Automation Exercise",
+  "name": "qa_automation_exercise",
   "version": "1.0.0",
   "description": "This framework uses wdio v4.14.1 to use Cucumber",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ".\\node_modules\\.bin\\wdio .\\src\\config\\wdio.conf.js"
   },
   "author": "Fernando Gutierrez",
   "license": "ISC",
@@ -17,7 +17,8 @@
     "wdio-allure-reporter": "^0.8.3",
     "wdio-cucumber-framework": "^2.2.8",
     "wdio-selenium-standalone-service": "0.0.12",
-    "webdriverio": "^4.14.1"
+    "webdriverio": "^4.14.1",
+    "yargs": "^12.0.5"
   },
   "babel": {
     "presets": [
